--- a/build.gradle
+++ b/build.gradle
@@ -29,5 +29,5 @@ subprojects {
 
 task wrapper(type: Wrapper) {
     gradleVersion = '2.14'
-    distributionUrl = "http://services.gradle.org/distributions/gradle-${gradleVersion}-all.zip"
+    distributionUrl = "http://services.gradle.org/distributions/gradle-2.14-all.zip"
 }
