--- a/graphql-publisher/build.gradle
+++ b/graphql-publisher/build.gradle
@@ -1,3 +1,4 @@
+apply from: "$rootProject.projectDir/gradle/coverage.gradle"
 apply from: "$rootProject.projectDir/gradle/publishing.gradle"
 
 dependencies {
