Added codacy code coverage support (still has errors, see issue #1)

--- a/build.gradle
+++ b/build.gradle
@@ -32,6 +32,9 @@ subprojects {
     repositories {
         mavenCentral()
         jcenter()
+        maven {
+            url 'https://oss.sonatype.org/content/repositories/snapshots'
+        }
     }
 
     group = 'io.engagingspaces'
