--- a/graphql-consumer/build.gradle
+++ b/graphql-consumer/build.gradle
@@ -9,4 +9,7 @@ dependencies {
 
     testCompile project(path: ':graphql-publisher')
     testCompile project(path: ':graphql-publisher', configuration: 'testOutput')
+
+    codacy group: 'com.codacy', name: 'codacy-coverage-reporter', version: '1.0.7'
+    codacy group: 'com.typesafe.netty', name: 'netty-http-pipelining', version: '1.1.4'
 }
