--- a/graphql-publisher/build.gradle
+++ b/graphql-publisher/build.gradle
@@ -9,6 +9,9 @@ dependencies {
 
     testCompile "junit:junit:$junitVersion"
     testCompile "io.vertx:vertx-unit:$vertxVersion"
+
+    codacy group: 'com.codacy', name: 'codacy-coverage-reporter', version: '1.0.7'
+    codacy group: 'com.typesafe.netty', name: 'netty-http-pipelining', version: '1.1.4'
 }
 
 task jarTest (type: Jar) {
