Fixed maven pom files, bumped version to 0.9.1 (issue #2)

--- a/build.gradle
+++ b/build.gradle
@@ -35,9 +35,10 @@ subprojects {
     }
 
     group = 'io.engagingspaces'
-    version = '0.9.0'
+    version = '0.9.1'
+
     sourceCompatibility = 1.8
-    archivesBaseName = "vertx-$name-$rootProject.version"
+//    archivesBaseName = "vertx-$name"
 }
 
 task wrapper(type: Wrapper) {
