--- a/examples/droids-microservice/build.gradle
+++ b/examples/droids-microservice/build.gradle
@@ -1,4 +1,4 @@
 dependencies {
-    compile project(':graphql-publisher')
+    compile project(':graphql-service-publisher')
     compile "io.vertx:vertx-core:$vertxVersion"
 }
