--- a/graphql-servicediscovery-core/build.gradle
+++ b/graphql-servicediscovery-core/build.gradle
@@ -7,8 +7,8 @@ dependencies {
     compile "io.vertx:vertx-service-proxy:$vertxVersion"
     compile "io.vertx:vertx-service-discovery:$vertxVersion"
 
-    testCompile project(path: ':graphql-publisher')
-    testCompile project(path: ':graphql-publisher', configuration: 'testOutput')
+    testCompile project(path: ':graphql-service-publisher')
+    testCompile project(path: ':graphql-service-publisher', configuration: 'testOutput')
 
     testCompile "junit:junit:$junitVersion"
     testCompile "io.vertx:vertx-unit:$vertxVersion"
