--- a/graphql-service-publisher/build.gradle
+++ b/graphql-service-publisher/build.gradle
@@ -7,6 +7,9 @@ dependencies {
     compile "io.vertx:vertx-service-discovery:$vertxVersion"
     compile "com.graphql-java:graphql-java:$graphqlVersion"
 
+    testCompile "io.engagingspaces:vertx-test-graphql-droids-microservice:$vertxGraphqlVersion"
+    testCompile "io.engagingspaces:vertx-test-graphql-starwars-microservice:$vertxGraphqlVersion"
+
     testCompile "junit:junit:$junitVersion"
     testCompile "io.vertx:vertx-unit:$vertxVersion"
 }
