--- a/build.gradle
+++ b/build.gradle
@@ -22,8 +22,7 @@ ext {
     graphqlVersion = '2.0.0'
 
     junitVersion = '4.12'
-    mockitoJava8Version = '1.0.0-beta'
-    awaitilityVersion = '1.7.0'
+    vertxGraphqlVersion = '0.9.3'
 }
 
 subprojects {
@@ -35,7 +34,7 @@ subprojects {
     }
 
     group = 'io.engagingspaces'
-    version = '0.9.2'
+    version = '0.9.3'
 
     sourceCompatibility = 1.8
 //    archivesBaseName = "vertx-$name"
