--- a/graphql-service-consumer/build.gradle
+++ b/graphql-service-consumer/build.gradle
@@ -2,7 +2,7 @@ apply from: "$rootProject.projectDir/gradle/coverage.gradle"
 apply from: "$rootProject.projectDir/gradle/publishing.gradle"
 
 dependencies {
-    compile project(':graphql-servicediscovery-core')
+    compile project(':graphql-core')
 
     testCompile "junit:junit:$junitVersion"
     testCompile "io.vertx:vertx-unit:$vertxVersion"
