--- a/settings.gradle
+++ b/settings.gradle
@@ -1,4 +1,4 @@
 rootProject.name='vertx-graphql-service-discovery'
 
-include 'graphql-servicediscovery-core', 'graphql-service-publisher', 'graphql-service-consumer'
+include 'graphql-core', 'graphql-service-publisher', 'graphql-service-consumer'
 
