--- a/build.gradle
+++ b/build.gradle
@@ -50,7 +50,7 @@ task wrapper(type: Wrapper) {
 
 allprojects {
     tasks.withType(Test).configureEach {
-        maxParallelForks = 4
+        maxParallelForks = Runtime.runtime.availableProcessors().intdiv(2) ?: 1
         if (!project.hasProperty("createReports")) {
             reports.html.required = false
             reports.junitXml.required = false
